<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dominikkrajcer.books.ui.screens.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.dominikkrajcer.books.ui.screens.details.DetailsFragment"
        tools:layout="@layout/details_fragment">
        <argument
            android:name="bookId"
            app:argType="integer" />
        <action
            android:id="@+id/action_detailsFragment_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>


    <fragment
        android:id="@+id/addFragment"
        android:name="com.dominikkrajcer.books.ui.screens.add.AddFragment"
        android:label="@string/Add_header"
        tools:layout="@layout/add_fragment" />

    <fragment
        android:id="@+id/editFragment"
        android:name="com.dominikkrajcer.books.ui.screens.edit.EditFragment"
        android:label="@string/Edit_header"
        tools:layout="@layout/edit_fragment">
        <argument
            android:name="bookId"
            app:argType="integer" />
    </fragment>
</navigation>