<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.dominikkrajcer.books.ui.screens.edit.EditViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_title"
                    android:inputType="text"
                    android:text="@={viewModel.book.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_author"
                    android:inputType="text"
                    android:text="@={viewModel.book.author}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                app:error="@{@string/Edit_isbn_error}"
                app:errorIconDrawable="@null"
                app:isValid="@{viewModel.isISBNValid}"
                app:text="@{viewModel.book.ISBN}">

                <EditText
                    android:id="@+id/ISBNEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789-"
                    android:hint="@string/Edit_isbn"
                    android:inputType="number"
                    android:text="@={viewModel.book.ISBN}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edit_number_of_pages"
                    android:inputType="number"
                    android:text="@={`` + viewModel.book.pageNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:rating="@={viewModel.book.rate}"
                android:stepSize="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Edit_edit" />

        </LinearLayout>

    </ScrollView>
</layout>